# rescatch

./: Cargo.toml  LICENSE.txt  README.org
.github/workflows/: rust_test.yml
src/: error.rs  http_parser.rs  main.rs  parser.rs  response.rs  tcpio.rs
src/error/: handler.rs  mod.rs  server.rs
src/error/handler/: http.rs
src/html/: mod.rs  sanitize.rs
src/http/: mod.rs  response.rs
src/http/response/: builder.rs  status_code.rs
src/parser/: error.rs  header_line.rs  header_pair.rs
src/parser/header_line/: error.rs  method.rs
src/parser/header_pair/: error.rs
src/parser/traits/: from_buffer.rs  mod.rs
src/response/: builder.rs
src/tcpio/: traits.rs
