[package]
name = "rescatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
regex = "1.10.2"
runwrap = { git = "https://github.com/PaprikaX33/runwrap.git", tag = "0.1.1", version = "0.1.1" }
